// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane DC — the classic tab at 820 (tablet branch, golden) Board view 1`] = `
{
  "lines": 2143,
  "sha256": "8b41bd580074789c06ca927d868a11daa38e6acf4296464206bfa792d0a7f4c6",
}
`;

exports[`lane DC — the classic tab at 820 (tablet branch, golden) Gantt view 1`] = `
{
  "lines": 1989,
  "sha256": "964adb805dcb513f20a4d190be72b2045c31fbb0eb1fc579c965fb6093c49d0c",
}
`;

exports[`lane DC — the classic tab at 820 (tablet branch, golden) Lookahead view 1`] = `
{
  "lines": 2234,
  "sha256": "0f20955b3e94f08b0b105e439bd8291d04985264cdd3ce9775d093633fdcbe31",
}
`;

exports[`lane DC — the classic tab at 820 (tablet branch, golden) Today view 1`] = `
{
  "lines": 2194,
  "sha256": "6785fb950bfd4c57dd634a44150387617ffc496cb4d721c3f442f6e1fac63a61",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /(tabs)/discover/schedule 1`] = `
{
  "lines": 511,
  "sha256": "eee9166f217617e7cf034af322f343234436827e4167bcd6dedba973e0e728dc",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /(tabs)/schedule (MobileScheduleScreen) 1`] = `
{
  "lines": 1817,
  "sha256": "793c600f62db695b9e2fd6037c5b1dc2ee299294402837690f5b7c0082590b11",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /copilot-hub 1`] = `
{
  "lines": 549,
  "sha256": "a9dbacfbad08dc87020d04989ce39668cc43c421e98923bf17bb1da2326565a4",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /schedule-review with a draft 1`] = `
{
  "lines": 465,
  "sha256": "0f1fd596d060161dc8c84c8482590125ee6f09d15f78499ca2a8a97e11569c4b",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /schedule-wizard 1`] = `
{
  "lines": 1874,
  "sha256": "ac865c84258373cfdf5443e407d6ece41bc6268fb21b63c4d56daba08de6d5ea",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) AddTaskModal, open 1`] = `
{
  "lines": 111,
  "sha256": "21a96d01384366fe838aa64337e060cbd5d84aa47810ee6b084b752eeab5c601",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) BaselineManagerModal, open 1`] = `
{
  "lines": 43,
  "sha256": "fb6ed3a3e98c465dc19b4be575f8711edc19a9ee6da61ed893d2532e35ad2442",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) COScheduleReflowPreviewModal, open 1`] = `
{
  "lines": 67,
  "sha256": "ba10e7cc6dbc858b6905f80ff3078af7eef78537874b7d4c390ebfe470cb7408",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ClosuresModal, open 1`] = `
{
  "lines": 186,
  "sha256": "a6f8aab84db2e5b474de628c435d3f454011d5cde8351b7bb4abe8db9cb181c5",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) CriticalPathPanel, open 1`] = `
{
  "lines": 55,
  "sha256": "a7ffb3932c2142611481bc167133925c16ddf0022f9ebc016b5f3103d33bf85c",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ExportSheet, open 1`] = `
{
  "lines": 91,
  "sha256": "9ddf7bbbbdfe62ce127edf301196fe17fd54132316d75a7656d861505ed2a0dd",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) LevelingPreviewModal, open 1`] = `
{
  "lines": 47,
  "sha256": "620570d43d2fcebe2ba2ada8f35cd46a0862004b4d55afb0ac7a15c024d24f7d",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) PredecessorPicker, open 1`] = `
{
  "lines": 72,
  "sha256": "66a33a491f31d4c6dfc7435a40dd1f18fe1a89db8d35da3003100a81389c9199",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) QuickBuildModal, open 1`] = `
{
  "lines": 186,
  "sha256": "fc84d63c2011ee5ca0a300afa10f83f6ca6296c56370acc968dfc61fcfcfcf63",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ScheduleAuditModal, open 1`] = `
{
  "lines": 20,
  "sha256": "27f8eab318524422d05557de929f9a0342d3659d4492bf32df2f40d0af5baae6",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ScheduleHealthDetail, open 1`] = `
{
  "lines": 425,
  "sha256": "03f9f7953a3a5a7b601b0d5e1f24ae9b20a83d29956cffe9d984176caa2d4c3f",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ScheduleSettingsMenu, open 1`] = `
{
  "lines": 291,
  "sha256": "9029fbf93087fc4ad731b601e72a228c0fa71f57873f4acd1c229a9ef2603cbe",
}
`;
